fix: 🐛 hide special character button on mobile devices

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -355,7 +355,7 @@
 	}
 
 	// HACK: hide special character button on mobile devices
-	.oo-ui-tool-name-specialCharacter {
+	.ve-ui-toolbar-group-specialCharacter {
 		display: none !important;
 	}
 }
